src/test/resources/expected/test-exception-8.kore.golden
Parse error: ../../../test/resources//test-exception-8.kore:6:9:
  |
6 |     X:S{#S} []
  |         ^
genericIdRawParser: Invalid first character '#'.
